@@ -1,7 +1,8 @@
 #!/bin/bash
 
 #Sakai 3 Demo
-export K2_TAG="0.2"
+export K2_TAG="HEAD"
+export UX_TAG="HEAD"
 
 # Treat unset variables as an error when performing parameter expansion
 set -o nounset
@@ -9,14 +10,14 @@ set -o nounset
 # environment
 export PATH=/usr/local/bin:$PATH
 export BUILD_DIR="/home/hybrid"
-export JAVA_HOME=/opt/jdk1.6.0_18
+export JAVA_HOME=/opt/jdk1.6.0_21
 export PATH=$JAVA_HOME/bin:${PATH}
 export MAVEN_HOME=/usr/local/apache-maven-2.2.1
 export M2_HOME=/usr/local/apache-maven-2.2.1
 export PATH=$MAVEN_HOME/bin:${PATH}
 export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
-export JAVA_OPTS="-server -Xmx512m -XX:MaxPermSize=128m -Djava.awt.headless=true -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"
-export K2_OPTS="-server -Xmx512m -XX:MaxPermSize=128m -Djava.awt.headless=true -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"
+export JAVA_OPTS="-server -Xmx512m -XX:MaxPermSize=128m -Djava.awt.headless=true"
+export K2_OPTS="-server -Xmx512m -XX:MaxPermSize=128m -Djava.awt.headless=true"
 BUILD_DATE=`date "+%D %R"`
 
 # ensure logs directory exists
@@ -33,24 +34,44 @@ set -o errexit
 
 # clean previous builds
 cd $BUILD_DIR
+rm -rf 3akai-ux
 rm -rf sakai3
 rm -rf ~/.m2/repository/org/sakaiproject
 
+# build 3akai ux
+echo "Building 3akai-ux@$UX_TAG..."
+cd $BUILD_DIR
+mkdir 3akai-ux
+cd 3akai-ux
+git clone -q git://github.com/sakaiproject/3akai-ux.git
+cd 3akai-ux
+git checkout -b "build-$UX_TAG" $UX_TAG
+mvn -B -e clean install
+
 # build sakai 3
-echo "Building sakai3/K2@0.2..."
+echo "Building nakamura@$K2_TAG..."
 cd $BUILD_DIR
 mkdir sakai3
 cd sakai3
-git clone -q git://github.com/ieb/open-experiments.git
-cd open-experiments/slingtests/osgikernel/
-git checkout $K2_TAG
-mvn clean install -Dmaven.test.skip=true
+git clone -q git://github.com/sakaiproject/nakamura.git
+cd nakamura
+git checkout -b "build-$K2_TAG" $K2_TAG
+mvn -B -e clean install
 
 # start sakai 3 instance
 echo "Starting sakai3 instance..."
 cd app/target/
-java $K2_OPTS -jar org.sakaiproject.nakamura.app-0.2.jar -p 8008 -f - > $BUILD_DIR/logs/sakai3-run.log.txt 2>&1 &
+K2_ARTIFACT=`find . -name "org.sakaiproject.nakamura.app*[^sources].jar"`
+java $K2_OPTS -jar $K2_ARTIFACT -p 8008 -f - > $BUILD_DIR/logs/sakai3-run.log.txt 2>&1 &
 
 # final cleanup
 cd $BUILD_DIR
-rm -rf ~/.m2/repository/org/sakaiproject
+# rm -rf ~/.m2/repository/org/sakaiproject
+
+# run nakamura integration tests
+echo "Sleeping ten minutes before running integration tests..."
+sleep 600
+echo "Running integration tests..."
+cd $BUILD_DIR/sakai3/nakamura
+date > $BUILD_DIR/logs/sakai3-integration-tests.log.txt
+./tools/runalltests.rb >> $BUILD_DIR/logs/sakai3-integration-tests.log.txt 2>&1
