@@ -2,7 +2,7 @@
 
 #Sakai 3 Demo
 export K2_TAG="HEAD"
-export UX_TAG="v_0.1.0_release"
+export UX_TAG="0.4.0"
 
 # Treat unset variables as an error when performing parameter expansion
 set -o nounset
@@ -10,14 +10,14 @@ set -o nounset
 # environment
 export PATH=/usr/local/bin:$PATH
 export BUILD_DIR="/home/hybrid"
-export JAVA_HOME=/opt/jdk1.6.0_17
+export JAVA_HOME=/opt/jdk1.6.0_21
 export PATH=$JAVA_HOME/bin:${PATH}
 export MAVEN_HOME=/usr/local/apache-maven-2.2.1
 export M2_HOME=/usr/local/apache-maven-2.2.1
 export PATH=$MAVEN_HOME/bin:${PATH}
 export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=512m"
-export JAVA_OPTS="-server -Xmx512m -XX:MaxPermSize=128m -Djava.awt.headless=true -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"
-export K2_OPTS="-server -Xmx512m -XX:MaxPermSize=128m -Djava.awt.headless=true -verbose:gc -XX:+PrintGCDetails -XX:+PrintGCTimeStamps"
+export JAVA_OPTS="-server -Xmx512m -XX:MaxPermSize=128m -Djava.awt.headless=true"
+export K2_OPTS="-server -Xmx512m -XX:MaxPermSize=128m -Djava.awt.headless=true"
 BUILD_DATE=`date "+%D %R"`
 
 # ensure logs directory exists
@@ -38,19 +38,28 @@ rm -rf sakai3
 rm -rf ~/.m2/repository/org/sakaiproject
 
 # build sakai 3
-echo "Building K2@$K2_TAG UX_TAG@$UX_TAG..."
+echo "Building Nakamura@$K2_TAG UX@$UX_TAG..."
 cd $BUILD_DIR
 mkdir sakai3
 cd sakai3
-git clone -q git://github.com/ieb/open-experiments.git
-cd open-experiments/slingtests/osgikernel/
-mvn clean install -Dmaven.test.skip=true -Dsakai-ux-tag=$UX_TAG
+git clone -q git://github.com/sakaiproject/nakamura.git
+cd nakamura
+mvn -B -e clean install -Dux=$UX_TAG
 
 # start sakai 3 instance
 echo "Starting sakai3 instance..."
 cd app/target/
-java $K2_OPTS -jar org.sakaiproject.nakamura.app-0.3-SNAPSHOT.jar -p 8008 -f - > $BUILD_DIR/logs/sakai3-run.log.txt 2>&1 &
+K2_ARTIFACT=`find . -name "org.sakaiproject.nakamura.app*[^sources].jar"`
+java $K2_OPTS -jar $K2_ARTIFACT -p 8008 -f - > $BUILD_DIR/logs/sakai3-run.log.txt 2>&1 &
 
 # final cleanup
 cd $BUILD_DIR
 rm -rf ~/.m2/repository/org/sakaiproject
+
+# run nakamura integration tests
+echo "Sleeping ten minutes before running integration tests..."
+sleep 600
+echo "Running integration tests..."
+cd $BUILD_DIR/sakai3/nakamura
+date > $BUILD_DIR/logs/sakai3-integration-tests.log.txt
+./tools/runalltests.rb >> $BUILD_DIR/logs/sakai3-integration-tests.log.txt 2>&1
